--- a/Template/Home/service.html
+++ b/Template/Home/service.html
@@ -59,11 +59,11 @@
     <section class="cards-section">
       <div class="container">
         <!-- Cloud Computing Section -->
-        <div class="service-1">
+        <div class="service-1" id="cloud-service">
           <div class="row">
             <div class="col-md-6">
               <div class="card card-image">
-                <img src="{% static 'images/cloud.gif' %}" alt="Cloud Computing" class="card-img" />
+                <img src="{% static 'images/cloud_service.gif' %}" alt="Cloud Computing" class="card-img" />
               </div>
             </div>
             <div class="col-md-6">
@@ -87,7 +87,7 @@
         <br /><br />
     
         <!-- Supply of Manpower Section -->
-        <div class="service-2">
+        <div class="service-2" id="manpower-service">
           <div class="row">
             <div class="col-md-6">
               <div class="card card-text">
@@ -101,7 +101,7 @@
             </div>
             <div class="col-md-6">
               <div class="card card-image">
-                <img src="{% static 'images/manpower.gif' %}" alt="Supply of Manpower" class="card-img" />
+                <img src="{% static 'images/manpower_service.gif' %}" alt="Supply of Manpower" class="card-img" />
               </div>
             </div>
           </div>
@@ -110,11 +110,11 @@
         <br /><br />
     
         <!-- Hardware Supply Section -->
-        <div class="service-3">
+        <div class="service-3" id="hardware-service">
           <div class="row">
             <div class="col-md-6">
               <div class="card card-image">
-                <img src="{% static 'images/hardware_icon.gif' %}" alt="Hardware Supply" class="card-img" />
+                <img src="{% static 'images/hardware_supply_service.gif' %}" alt="Hardware Supply" class="card-img" />
               </div>
             </div>
             <div class="col-md-6">
@@ -132,7 +132,7 @@
         <br />
     
         <!-- Digitalization of Documents Section -->
-        <div class="service-4">
+        <div class="service-4" id="digitalization-service">
           <div class="row">
             <div class="col-md-6">
               <div class="card card-text">
@@ -147,7 +147,7 @@
             </div>
             <div class="col-md-6">
               <div class="card card-image">
-                <img src="{% static 'images/data_management.gif' %}" alt="Digitalization of Documents" class="card-img" />
+                <img src="{% static 'images/data_management_service.gif' %}" alt="Digitalization of Documents" class="card-img" />
               </div>
             </div>
           </div>
@@ -156,11 +156,11 @@
         <br />
     
         <!-- Hardware AMC Section -->
-        <div class="service-5">
+        <div class="service-5" id="hardware-amc-service">
           <div class="row">
             <div class="col-md-6">
               <div class="card card-image">
-                <img src="{% static 'images/program_management.gif' %}" alt="Hardware AMC" class="card-img" />
+                <img src="{% static 'images/hardware_amc_service.gif' %}" alt="Hardware AMC" class="card-img" />
               </div>
             </div>
             <div class="col-md-6">
@@ -174,6 +174,25 @@
                   5. Comprehensive Annual Maintenance Contract for Desktop, Servers, and other computer peripherals - The Municipal CO-OP Bank Ltd Mumbai.<br>
                   6. Contract of Desktop Computers, Printers, and other allied IT peripherals available in various units - Department of Post Government of India.
                 </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+         <!-- Hardware AMC Section -->
+         <div class="service-5" id="ai-service">
+          <div class="row"> 
+            <div class="col-md-6">
+              <div class="card card-text">
+                <h3 class="card-title"><u>A.I. Based Solutions & Features</u></h3>
+                <p class="card-description">
+                  TechnoWin IT Infra Pvt Ltd provides cutting-edge AI-based solutions to enhance efficiency and decision-making in projects. Our AI-driven technologies streamline operations, automate processes, and deliver intelligent insights, helping businesses optimize performance and achieve their goals with precision.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="card card-image">
+                <img src="{% static 'images/ai_solutions_service.gif' %}" alt="Hardware AMC" class="card-img" />
               </div>
             </div>
           </div>
