--- a/Template/Home/about_us.html
+++ b/Template/Home/about_us.html
@@ -80,7 +80,7 @@
     </section>
     {% endcomment %}
 
-    <section>
+    <section id="history-technowin">
       <div class="row">
         <div class="col-lg-12">
           <head>
