--- a/Template/Home/contact_us.html
+++ b/Template/Home/contact_us.html
@@ -65,7 +65,7 @@
         </div>
     </section>
 
-    <section class="feedback-section">
+    <section class="feedback-section" id="feedback-section">
         <h2 style="text-align: center; margin-bottom: 30px; font-size: 40px; color: black; text-shadow: 2px 2px 8px rgba(209, 12, 12, 0.4); font-family: 'Arial', sans-serif; letter-spacing: 2px;">Customer Feedback</h2>
         <div class="feedback-container">
             <!-- Feedback Card 1 -->
