--- a/Template/Home/about_us.html
+++ b/Template/Home/about_us.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     {% load static %}
+    <link rel="stylesheet" href="{% static 'css/share_layout.css' %}">
     <link rel="stylesheet" href="{% static 'css/about_us_style.css' %}" />
     <link
       rel="stylesheet"
