--- a/Template/Home/contact_us.html
+++ b/Template/Home/contact_us.html
@@ -4,6 +4,7 @@
     <head>
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/contact_us_style.css' %}">
+        <link rel="stylesheet" href="{% static 'css/share_layout.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         
         <link
