--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -5,6 +5,7 @@
         
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/main_style.css' %}">
+        <link rel="stylesheet" href="{% static 'css/share_layout.css' %}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
@@ -1239,6 +1240,7 @@
         }
 
     </script>
+    
 
 </html>
 
