--- a/Template/Shared/layout.html
+++ b/Template/Shared/layout.html
@@ -121,7 +121,7 @@
             }
           }
           
-          @media (max-width: 480px) {
+          {% comment %} @media (max-width: 480px) {
             .search-bar {
               width: 120px; /* Make search bar smaller on mobile devices */
               margin-top: 10px; /* Further reduce margin */
@@ -134,7 +134,7 @@
                 left: 80%; /* Adjust icon position for smaller screens */
                 top: 63%; /* Adjust vertical centering */
             }
-          } 
+          }  {% endcomment %}
       </style>
 
   
