--- a/Template/Home/contact_us.html
+++ b/Template/Home/contact_us.html
@@ -225,8 +225,8 @@
                 </div>
                 <div class="feedback-content">
                     <h4 class="project-feedback-name"><u><i>"Audit Utility Software"</u></i></h4><br>
-                    <h3 class="feedback-name">CGST Thane</h3>
-                    {% comment %} <p class="feedback-post">CTO at Future Tech</p>  {% endcomment %}
+                    {% comment %} <h3 class="feedback-name">Alice Johnson</h3>
+                    <p class="feedback-post">CTO at Future Tech</p> {% endcomment %}
                     <p class="feedback-description">"The team was highly professional and delivered outstanding results."</p>
                     <div class="feedback-stars">
                         <span class="star">★</span>
