--- a/Template/Home/contact_us.html
+++ b/Template/Home/contact_us.html
@@ -147,7 +147,7 @@
             <!-- Feedback Card 4 -->
             <div class="feedback-card">
                 <div class="feedback-image">
-                    <img src="{% static 'client_logo/ace.png'  %}" alt="Feedback 4" >
+                    <img src="{% static 'client_logo/ace.png'  %}" alt="Feedback 4" > 
                 </div>
                 <div class="feedback-content">
                     <h4 class="project-feedback-name"><u><i>"School Management Software"</u></i></h4><br><br>
@@ -225,9 +225,9 @@
                 </div>
                 <div class="feedback-content">
                     <h4 class="project-feedback-name"><u><i>"Audit Utility Software"</u></i></h4><br>
-                    {% comment %} <h3 class="feedback-name">Alice Johnson</h3>
-                    <p class="feedback-post">CTO at Future Tech</p> {% endcomment %}
-                    <p class="feedback-description">"The team was highly professional and delivered outstanding results."</p>
+                    <h3 class="feedback-name">CGST, Thane Commissionerate </h3>
+                    {% comment %} <p class="feedback-post">CTO at Future Tech</p>  {% endcomment %}
+                    <p class="feedback-description">"While the team of the Directorate of Systems & Data Management at Bengaluru deserves credit for developing the Audit Module – a workflow based solution to GST Audits , it is the team of GST (Audit) Commissionerate , Thane that merits a special mention for developing a very friendly and wholesome web-based tool for monitoring the progress of Audit , end – to – end along with a dashboard and generation of a Management Information System (MIS) and even Audit Paras ."</p>
                     <div class="feedback-stars">
                         <span class="star">★</span>
                         <span class="star">★</span>
