--- a/Template/Shared/layout.html
+++ b/Template/Shared/layout.html
@@ -213,17 +213,12 @@
                 </div>
             </li> {% endcomment %}
 
-            <!-- Contact Us Button -->
-            {% comment %} <li >
-                <a href="{% url 'ContactUs' %}#technoWinContactSection" id="contactButton" class="contact-btn">
-                    Contact Us <i class="fas fa-arrow-right" style="margin-left: 10px;"></i>
-                </a>
-            </li> {% endcomment %}
- 
+           
+{% comment %}  
             <li>
                 <input type="text" class="search-bar" placeholder="Search..." id="searchInput">
                
-              </li>
+              </li> {% endcomment %}
             
               <li>
                 <a href="{% url 'ContactUs' %}#technoWinContactSection" id="contactButton" class="contact-btn">
