--- a/static/css/software_style.css
+++ b/static/css/software_style.css
@@ -672,9 +672,10 @@ html {
 
 /* Responsive Heading */
 .web-project h3 {
-  font-size: 28px; /* Adjusted for mobile readability */
+  font-size: 40px; /* Adjusted for mobile readability */
   text-align: center;
   margin-bottom: 20px;
+  margin-top: 50px;
 }
 
 /* Mobile-Specific Adjustments */
