--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -738,7 +738,7 @@
         
         .wrapper {
             background-color:rgb(8, 55, 116);
-            height: 50%;
+            height: 60%;
             width: 100%;
             display: flex;
             justify-content: center;
@@ -985,13 +985,13 @@
         <div class='carousel__item'>
             <div class='carousel__item-head'>
                 <div class="feedback-image">
-                    <img src="{% static 'client_logo/mvst.png' %}" alt="Feedback 3">
+                    <img src="{% static 'client_logo/cgst.png' %}" alt="Feedback 3">
                 </div>
             </div>
             <div class='carousel__item-body'>
-                <h3 class="feedback-name">Dr. Ramnath Subramaniam</h3>
-                    <p class="feedback-post">CEO MVSTF Govt. of Maharashtra</p>
-                    <p class="feedback-description">"We appreciate your Services and Deliveries."</p>
+                <h3 class="feedback-name">CGST, Thane Commissionerate</h3>
+                    <p class="feedback-post">Audit Utility Software</p>
+                    <p class="feedback-description">"We appreciate for developing a very friendly web-based tool for monitoring the progress of Audit , along with a dashboard and generation of a Management Information System (MIS)."</p>
             <div class="feedback-stars">
                 <span class="star">★</span>
                 <span class="star">★</span>
