--- a/Template/Home/contact_us.html
+++ b/Template/Home/contact_us.html
@@ -28,7 +28,7 @@
         </div> 
     </section>
 
-    <div id="social-media-section">
+    <div id="contact-media-section">
         <div class="video-container">
             <video autoplay muted loop>
                 <source src="{% static 'images/contact_background_video.mp4' %}" type="video/mp4">
