--- a/Template/Home/service.html
+++ b/Template/Home/service.html
@@ -43,7 +43,7 @@
       </div>
 
       <!-- Card with Video Background -->
-      <div class="image-card">
+      <div class="image-card" id="service-background">
         <video autoplay muted loop class="background-video">
           <source
             src="{% static 'images/services_background_video.mp4' %}"
@@ -57,7 +57,7 @@
       </div>
     </section>
 
-    <section class="cards-section">
+    <section class="cards-section" id="service-info">
       <div class="container">
         <!-- Cloud Computing Section -->
         <div class="service-1" id="cloud-service">
