--- a/Template/Home/software.html
+++ b/Template/Home/software.html
@@ -22,12 +22,8 @@
 </head>
 <body>
   
-    <section class="services-section">
-        <div class="go-back">
-            <img src="{% static 'images/back.gif' %}" alt="Go Back" class="go-back-image" onclick="history.back()" />
-        </div>
-
-        <section class="background-section">
+  
+        <section class="background-section" id="background-section">
             <!-- Video background -->
             <video autoplay loop muted class="background-video">
                 <source src="{% static 'images/software_video.mp4' %}" type="video/mp4">
