--- a/Template/Shared/layout.html
+++ b/Template/Shared/layout.html
@@ -182,6 +182,7 @@
             <li style="margin-top:2%"><a href="{% url 'Software' %}">Software</a></li>
             <li style="margin-top:2%"><a href="{% url 'Services' %}">Services</a></li>
             <li style="margin-top:2%"><a href="{% url 'ContactUs' %}">Contact Us</a></li>
+            <li style="margin-top:2%"><a href="{% url 'siteMap' %}">Site Map</a></li>
             {% comment %} <li>
                 <div id="google_translate_element"></div>
                 <script>
