--- a/Template/Home/index.html
+++ b/Template/Home/index.html
@@ -23,7 +23,7 @@
     
 <body>
 
-    <section class="slider-video-section">
+    <section class="slider-video-section" id="slider-video-section">
         <video class="auto-video" autoplay muted loop>
         <source src="{% static 'slider/slider_video.mp4' %}" type="video/mp4">
         Your browser does not support the video tag.
@@ -83,7 +83,7 @@
     {% endcomment %}
 
     <!-- why-techno Section --> 
-    <section class="why-techno">
+    <section class="why-techno" id-"why-techno_stand">
         <h2>
             <u>Why TechnoWin IT Infra Stands Out</u>
         </h2>
@@ -141,7 +141,7 @@
     </section>
 
     <!-- why-techno-section Section --> 
-    <section class="why-techno-section">
+    <section class="why-techno-section" id="why-techno-section">
         {% comment %} <h2 style="text-align: center; margin-bottom: 30px; font-size: 40px; color: black; text-shadow: 2px 2px 8px rgba(209, 12, 12, 0.4); font-family: 'Arial', sans-serif; letter-spacing: 2px;">
             <u>Why TechnoWin IT Infra Stands Out</u>
         </h2> {% endcomment %}
@@ -904,7 +904,7 @@
         }
     </style>
 
-    <section class='wrapper'>
+    <section class='wrapper' id="short_feedback">
         <div class='carousel'>
         <div class='carousel__item'>
             <div class='carousel__item-head'>
