--- a/Template/Home/contact_us.html
+++ b/Template/Home/contact_us.html
@@ -28,7 +28,7 @@
         </div> 
     </section>
 
-    <div id="contact-media-section">
+    <div id="social-media-section">
         <div class="video-container">
             <video autoplay muted loop>
                 <source src="{% static 'images/contact_background_video.mp4' %}" type="video/mp4">
@@ -225,7 +225,7 @@
                 </div>
                 <div class="feedback-content">
                     <h4 class="project-feedback-name"><u><i>"Audit Utility Software"</u></i></h4><br>
-                    <h3 class="feedback-name">CGST, Thane Commissionerate </h3>
+                    <h3 class="feedback-name">Alice Johnson</h3>
                     {% comment %} <p class="feedback-post">CTO at Future Tech</p>  {% endcomment %}
                     <p class="feedback-description">"While the team of the Directorate of Systems & Data Management at Bengaluru deserves credit for developing the Audit Module – a workflow based solution to GST Audits , it is the team of GST (Audit) Commissionerate , Thane that merits a special mention for developing a very friendly and wholesome web-based tool for monitoring the progress of Audit , end – to – end along with a dashboard and generation of a Management Information System (MIS) and even Audit Paras ."</p>
                     <div class="feedback-stars">
