--- a/Template/Home/siteMap.html
+++ b/Template/Home/siteMap.html
@@ -6,6 +6,7 @@
         {% load static %}
         {% comment %} <link rel="stylesheet" href="{% static 'css/main_style.css' %}"> {% endcomment %}
         <link rel="stylesheet" href="{% static 'css/siteMap.css' %}">
+        <link rel="stylesheet" href="{% static 'css/share_layout.css' %}">
         {% comment %} <link rel="stylesheet" href="{% static 'css/share_layout.css' %}"> {% endcomment %}
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         
@@ -99,27 +100,54 @@
                     <ul>
                         <li><a href="{% url 'Software' %}#background-section">Software Slider</a></li>
                         <li><a href="{% url 'Software' %}#app-project">APP Developed Project Information</a></li>
+                        <ol>
+                            <li><a href="{% url 'Software' %}#project-1">PSN Head-On App</a></li>
+                            <li><a href="{% url 'Software' %}#project-2">PSN On-Time App</a></li>
+                            <li><a href="{% url 'Software' %}#project-3">Employee Self Service App</a></li>
+                            <li><a href="{% url 'Software' %}#project-4">Attendance Management System App</a></li>
+                        </ol>
                         <li><a href="{% url 'Software' %}#web-project">Web Developed Project Information</a></li>
+                        <ol>
+                            <li><a href="{% url 'Software' %}#web-project-1">Water Connection Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-2">CIDCO Services Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-3">Database Management System Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-4">GPDP and MPR System Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-5">School Management System Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-6">CM Apprentice Management System Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-7">Divyang Survey System Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-8">HRMS and Payroll Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-9">Knowledge Resource Center/ Library Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-a">Citizen Scheme Management Portal Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-b">PT, LWF and Other Tax Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-c">License and Registration Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-d">Audit Utility Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-e">Compliance Audit Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-f">Compliance Operations Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-g">College Management System, Website Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-h">SRP Recruitment Management System Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-i">ERP, Website and Admission Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-j">Salary Register Software</a></li>
+                        </ol>
                     </ul>
                 </li>
                 <li><a href="{% url 'Services' %}">Services</a>
                     <ul>
                         <li><a href="{% url 'Services' %}#service-background">Services Slider</a></li>
                         <li><a href="{% url 'Services' %}#service-info">Service Information</a></li>
-                        <ul>
+                        <ol>
                             <li><a href="{% url 'Services' %}#cloud-service">Cloud Computing</a></li>
                             <li><a href="{% url 'Services' %}#manpower-service">Supply of Manpower</a></li>
                             <li><a href="{% url 'Services' %}#hardware-service">Hardware Supply</a></li>
                             <li><a href="{% url 'Services' %}#digitalization-service">Digitalization of Documents</a></li>
                             <li><a href="{% url 'Services' %}#hardware-amc-service">Hardware AMC</a></li>
                             <li><a href="{% url 'Services' %}#ai-service">A.I. Based Solutions & Features</a></li>
-                        </ul>
+                        </ol>
                         <li><a href="{% url 'Services' %}#faq-section">FAQ</a></li>
                     </ul>
                 </li>
                 <li><a href="{% url 'ContactUs' %}">Contact Us</a>
                     <ul>
-                        <li><a href="{% url 'ContactUs' %}#contact-media-section">Contact Us Slider</a></li>
+                        <li><a href="{% url 'ContactUs' %}#social-media-section">Contact Us Slider</a></li>
                         <li><a href="{% url 'ContactUs' %}#socialIcons">Socail Media</a></li>
                         <li><a href="{% url 'ContactUs' %}#feedback-section">Customer Feedback</a></li>
                         <li><a href="{% url 'ContactUs' %}#technoWinContactSection">Get In Touch Form</a></li>
