--- a/Template/Home/software.html
+++ b/Template/Home/software.html
@@ -138,7 +138,7 @@
                     <source src="{% static 'project_data/water_connection_project.mp4' %}" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
-                <h2><u>Water Connection</u></h2>
+                <h2><u>Water Connection Software</u></h2>
                 <h4><i>CIDCO – Water Department, Engineering Department, and Horticulture Department</i></h4>
             </div>
             
