--- a/Template/Shared/layout.html
+++ b/Template/Shared/layout.html
@@ -144,22 +144,29 @@
 
     <section class="topView" id="topSection">
             <div class="row">
-                <div class="col-md-4 text-center">
+                <div class="col-md-3 text-center">
                     <a href="https://maps.app.goo.gl/UzynwwU276cmS7su5" target="_blank">
                         <img src="{% static 'social_media/location.png' %}" alt="Location">
                         Goregaon, Mumbai
                     </a>
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-3 text-center">
                     <a href="mailto:technowinitinfra@gmail.com" target="_blank">
                         <img src="{% static 'social_media/gmail.png' %}" alt="Email">
                         technowinitinfra@gmail.com
                     </a>
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-3 text-center">
                     <a href="tel:+917738019120" target="_blank">
                         <img src="{% static 'social_media/call_icon.png' %}" alt="Call">
                         +91 7738019120
+                    </a>
+                </div>
+
+                <div class="col-md-3 text-center">
+                    <a href="{% url 'siteMap' %}">
+                        <img src="{% static 'social_media/site_map.png' %}" alt="Site Map">
+                       Site Map
                     </a>
                 </div>
             </div>
@@ -182,7 +189,6 @@
             <li style="margin-top:2%"><a href="{% url 'Software' %}">Software</a></li>
             <li style="margin-top:2%"><a href="{% url 'Services' %}">Services</a></li>
             <li style="margin-top:2%"><a href="{% url 'ContactUs' %}">Contact Us</a></li>
-            <li style="margin-top:2%"><a href="{% url 'siteMap' %}">Site Map</a></li>
             {% comment %} <li>
                 <div id="google_translate_element"></div>
                 <script>
@@ -221,13 +227,7 @@
                
               </li> {% endcomment %}
             
-              <li>
-                <a href="{% url 'ContactUs' %}#technoWinContactSection" id="contactButton" class="contact-btn">
-                    <!-- Only the GIF image, no text -->
-                    <img src="{% static 'images/contact.gif' %}" class="contact-btn img" alt="Contact Us">
-                </a>
-            </li>
-              
+            
                
             <li>
                 <a href="{% url 'Services' %}#faq-section" id="contactButton" class="contact-btn">
@@ -235,6 +235,15 @@
                     <img src="{% static 'images/helpcenter.gif' %}" class="contact-btn img" alt="Contact Us">
                 </a>
             </li>
+
+            <li>
+                <a href="{% url 'ContactUs' %}#technoWinContactSection" id="contactButton" class="contact-btn">
+                    <!-- Only the GIF image, no text -->
+                    <img src="{% static 'images/contact.gif' %}" class="contact-btn img" alt="Help Center">
+                    
+                </a>
+            </li>
+              
               
         </ul>
 
@@ -600,22 +609,6 @@
         
     </script>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    <script>
-        $(document).ready(function() {
-            debugger;
-            $.ajax({
-                url: "website_counter",  // Fix: Use proper URL
-                type: "GET",
-                success: function(response) {
-                    $("#visitor-count").text(response.total_visits);
-                },
-                error: function() {
-                    $("#visitor-count").text("Error fetching count");
-                }
-            });
-        });
-    </script>
+    
 
 </html>
