--- a/static/css/siteMap.css
+++ b/static/css/siteMap.css
@@ -1,9 +1,9 @@
-body {
+/* body {
     font-family: 'Poppins', sans-serif;
     background-color: #f4f7fc;
     padding: 20px;
     margin: 0;
-}
+} */
 
 .content {
     background: white;
@@ -99,6 +99,7 @@ h2 {
     transform: rotate(90deg);
 }
 
+
 @media (max-width: 600px) {
     .sitemap > li {
         font-size: 16px;
@@ -107,3 +108,5 @@ h2 {
         font-size: 14px;
     }
 }
+
+
